Properties options={'SKIP_SAVE'} not working, patch attached #29251

Closed
opened 2011-11-14 11:38:31 +01:00 by Domino Marama · 3 comments

%%%svn revision r41823

options={'SKIP_SAVE'} is not setting the property.is_skip_save attribute. This prevents properties from being excluded for saves when bl_options={'PRESET'} is used in the operator.

I've attached a patch with the missing code.%%%

%%%svn revision r41823 options={'SKIP_SAVE'} is not setting the property.is_skip_save attribute. This prevents properties from being excluded for saves when bl_options={'PRESET'} is used in the operator. I've attached a patch with the missing code.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%applied r41833. thanks for the fix.%%%

%%%applied r41833. thanks for the fix.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender-addons#29251
No description provided.