fix [#29251] Properties options={'SKIP_SAVE'} not working, patch attached patch from Domino Marama (domino)